[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-coding-dojo"
version = "0.1.0"
description = "Python algorithms, design patterns, problems and unit tests"
authors = [{ name = "Andrea Fiori" }]
requires-python = ">=3.8"
dependencies = ["pytest"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
# addopts = "-v --cov=myproject --cov-report=html"
testpaths = ["tests"]
